src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Trainer__c</fullName>
        <description>Project Implementation staff who is responsible for the end user training</description>
        <label>Trainer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Andrew Hart</fullName>
                </value>
                <value>
                    <fullName>Blake Brown</fullName>
                </value>
                <value>
                    <fullName>Bob Henry</fullName>
                </value>
                <value>
                    <fullName>Brandon Stam</fullName>
                </value>
                <value>
                    <fullName>Brittany Thies</fullName>
                </value>
                <value>
                    <fullName>Bruce Silva</fullName>
                </value>
                <value>
                    <fullName>Chase Jones</fullName>
                </value>
                <value>
                    <fullName>Colby Schofield</fullName>
                </value>
                <value>
                    <fullName>Dean Daniels</fullName>
                </value>
                <value>
                    <fullName>Jeremy Duval</fullName>
                </value>
                <value>
                    <fullName>Kendall Schrodt</fullName>
                </value>
                <value>
                    <fullName>LaTricia White</fullName>
                </value>
                <value>
                    <fullName>Lee Munizza</fullName>
                </value>
                <value>
                    <fullName>Mark Jenkins</fullName>
                </value>
                <value>
                    <fullName>Mike Fowler</fullName>
                </value>
                <value>
                    <fullName>Quentin Gregg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Comments__c</fullName>
        <label>Training Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Training_End_Date__c</fullName>
        <description>The date the training session ends</description>
        <label>Training End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Start_Date__c</fullName>
        <description>The date the training session starts</description>
        <label>Training Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TriTech_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>List the name of the TriTech project manager for this project. If no PM is involved, enter &quot;NA&quot; or something to indicate that.</description>
        <inlineHelpText>List the name of the TriTech project manager for this project. If no PM is involved, enter &quot;NA&quot; or something to indicate that.</inlineHelpText>
        <label>TriTech Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TriTech_Sales_Order__c</fullName>
        <label>TriTech Sales Order #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All_Projects1</fullName>
        <columns>TriTech_Sales_Order__c</columns>
        <columns>NAME</columns>
        <columns>Legacy_Project_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Project_Asset__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Lead__c</columns>
        <columns>Asset_Price__c</columns>
        <columns>Kickoff_Date__c</columns>
        <columns>Go_Live_Date__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Target_Closure_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Projects_2012</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Project_Lead__c</columns>
        <columns>TriTech_Project_Manager__c</columns>
        <columns>Project_Assignment_Date__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completion_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2012</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Completion_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2012</value>
        </filters>
        <label>Closed Projects - 2012</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Projects_2013</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Project_Lead__c</columns>
        <columns>TriTech_Project_Manager__c</columns>
        <columns>Project_Assignment_Date__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completion_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2013</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Completion_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2013</value>
        </filters>
        <label>Closed Projects - 2013</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Projects_2014</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Project_Lead__c</columns>
        <columns>TriTech_Project_Manager__c</columns>
        <columns>Project_Assignment_Date__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completion_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2014</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Completion_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2014</value>
        </filters>
        <label>Closed Projects - 2014</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Projects_2015</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Project_Lead__c</columns>
        <columns>TriTech_Project_Manager__c</columns>
        <columns>Project_Assignment_Date__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completion_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Completion_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2015</value>
        </filters>
        <label>Closed Projects - 2015</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Projects_2016</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Project_Title__c</columns>
        <columns>Project_Lead__c</columns>
        <columns>Project_Assignment_Date__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Go_Live_Date__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completion_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Completion_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2016</value>
        </filters>
        <label>Closed Projects - 2016</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Projects_2016_2017</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Project_Title__c</columns>
        <columns>Project_Lead__c</columns>
        <columns>Project_Assignment_Date__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Go_Live_Date__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completion_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Completion_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2017</value>
        </filters>
        <label>Closed Projects - 2016-2017</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Projects_2017</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Project_Title__c</columns>
        <columns>Project_Lead__c</columns>
        <columns>TriTech_Project_Manager__c</columns>
        <columns>Project_Assignment_Date__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Go_Live_Date__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completion_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2017</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Completion_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2017</value>
        </filters>
        <label>Closed Projects - 2017</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Projects_2018</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Project_Title__c</columns>
        <columns>Project_Lead__c</columns>
        <columns>TriTech_Project_Manager__c</columns>
        <columns>Project_Assignment_Date__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Go_Live_Date__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completion_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2018</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Completion_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2018</value>
        </filters>
        <label>Closed Projects - 2018</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Projects_Blake</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>TriTech_Sales_Order__c</columns>
        <columns>Legacy_Project_Number__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project_Title__c</columns>
        <columns>Project_Asset__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Lead__c</columns>
        <columns>Asset_Price__c</columns>
        <columns>Kickoff_Date__c</columns>
        <columns>Go_Live_Date__c</columns>
        <columns>Install_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Project_Lead__c</field>
            <operation>equals</operation>
            <value>Blake Brown</value>
        </filters>
        <label>Closed Projects - Blake</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Projects_Juan</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>TriTech_Sales_Order__c</columns>
        <columns>Legacy_Project_Number__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project_Title__c</columns>
        <columns>Project_Asset__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Lead__c</columns>
        <columns>Asset_Price__c</columns>
        <columns>Kickoff_Date__c</columns>
        <columns>Go_Live_Date__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Target_Closure_Date__c</columns>
        <columns>Target_Closure_Date_Confidence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Project_Lead__c</field>
            <operation>equals</operation>
            <value>Juan Franquez</value>
        </filters>
        <label>Closed Projects - Juan</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NEARme_Projects</fullName>
        <booleanFilter>(1 OR 2 OR 3) AND 4 AND 5</booleanFilter>
        <columns>TriTech_Sales_Order__c</columns>
        <columns>NAME</columns>
        <columns>Legacy_Project_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Project_Asset__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Lead__c</columns>
        <columns>Asset_Price__c</columns>
        <columns>Kickoff_Date__c</columns>
        <columns>Go_Live_Date__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Target_Closure_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity__c</field>
            <operation>contains</operation>
            <value>Nearme,mobile</value>
        </filters>
        <filters>
            <field>Project_Name__c</field>
            <operation>contains</operation>
            <value>Nearme,mobile</value>
        </filters>
        <filters>
            <field>Project_Asset__c</field>
            <operation>contains</operation>
            <value>nearme,mobile</value>
        </filters>
        <filters>
            <field>Project_Asset__c</field>
            <operation>notContain</operation>
            <value>NEARme cancelled</value>
        </filters>
        <filters>
            <field>Project_Name__c</field>
            <operation>notContain</operation>
            <value>NEARme cancelled</value>
        </filters>
        <label>NEARme Projects (excluding cancelled)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Advanced_Reporting_Module</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>TriTech_Sales_Order__c</columns>
        <columns>Legacy_Project_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Account_State__c</columns>
        <columns>Project_Title__c</columns>
        <columns>Project_Asset__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Lead__c</columns>
        <columns>TriTech_Project_Manager__c</columns>
        <columns>Project_Assignment_Date__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Go_Live_Date__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Title__c</field>
            <operation>contains</operation>
            <value>Advanced Reporting,ARM,Advanced Reports</value>
        </filters>
        <filters>
            <field>Project_Asset__c</field>
            <operation>contains</operation>
            <value>Advanced Reporting,ARM,Advanced Reports</value>
        </filters>
        <label>All Advanced Reporting Module Projects</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Citygate_Projects</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Lead__c</columns>
        <columns>Projected_of_Hours__c</columns>
        <columns>Project_Assignment_Date__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Professional_Services</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>notContain</operation>
            <value>Complete,Cancelled,Archived</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Citygate</value>
        </filters>
        <label>Open Citygate Projects</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_CrimeMapping_ResponseMapping_Hosting</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Lead__c</columns>
        <columns>TriTech_Project_Manager__c</columns>
        <columns>Project_Assignment_Date__c</columns>
        <columns>Install_Date__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.CrimeMapping_ResponseMapping_Hosting</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>notContain</operation>
            <value>Complete,Installed,Cancelled</value>
        </filters>
        <label>Open CrimeMapping/ResponseMapping</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Advanced_Reporting_Module</fullName>
        <active>true</active>
        <description>Advanced Reporting Module solution (addition to Dashboard)</description>
        <label>Advanced Reporting Module</label>
    </recordTypes>
    <recordTypes>
        <fullName>CrimeMapping_ResponseMapping_Hosting</fullName>
        <active>true</active>
        <description>CrimeMapping or ResponseMapping hosted solution</description>
        <label>CrimeMapping/ResponseMapping Hosting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Desktop_Solutions</fullName>
        <active>true</active>
        <description>Omega solutions based on ArcGIS Desktop</description>
        <label>Desktop Solutions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mobile_Solutions</fullName>
        <active>true</active>
        <description>Mobile solutions, including NEARme</description>
        <label>Mobile Solutions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Omega_Dashboard_Solutions</fullName>
        <active>true</active>
        <description>Omega solutions based on ArcGIS Server and Silverlight</description>
        <label>Omega Dashboard Solutions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Omega_Enterprise_Solution_multiple_products</fullName>
        <active>true</active>
        <description>Multiple product project</description>
        <label>Omega Enterprise Solution (multiple products)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Professional_Services</fullName>
        <active>true</active>
        <description>Additional services provided not included as part of standard Omega solution</description>
        <label>Professional Services</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>